Change input type and hotfix some layout issues

--- a/src/pages/Login/index.css
+++ b/src/pages/Login/index.css
@@ -1,10 +1,22 @@
+
+.wrapper{
+    height:85%;
+}
 .content{
     color: white;
     display:flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 40%;
     width: 100%;
+    height:100%;
+}
+
+.login-wrapper{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .input{
@@ -32,3 +44,7 @@
     letter-spacing: 0.1em;
     color: #FFFFFF;
 }
+
+.center-text input{
+    text-align: center;
+  }
